--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,38 @@
         transform: rotateX(360deg) rotateY(360deg);
     }
 }
+
+
+
+body{
+  background-color: rgb(4, 4, 106);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  min-height: 20vh; 
+  flex-direction: column;
+  
+}
+
+nav a {position: relative;
+color: white;
+text-decoration: none;
+margin: 0 12px;
+font-family: Arial, Helvetica, sans-serif;
+}
+
+nav{position: relative;
+display: flex;
+margin: 10px 30px;}
+
+#barre{
+  position: absolute;
+  left: 0;
+  height: 33px;
+  width: 0;
+  background:rgba(229, 10, 18, 0.5);
+  bottom: -8px;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
