--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,13 @@ color: white;
 text-decoration: none;
 margin: 0 12px;
 font-family: Arial, Helvetica, sans-serif;
+padding: 0 5px;
 }
 
 nav{position: relative;
 display: flex;
-margin: 10px 30px;}
+margin: 10px 30px;
+padding: 0 10px;}
 
 #barre{
   position: absolute;
